Added AddTask and List Tasks features

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 	</dependencies>
 
 	<build>
+		<testSourceDirectory>src/test/java</testSourceDirectory>
 		<pluginManagement><!-- lock down plugins versions to avoid using Maven
 			defaults (may be moved to parent pom) -->
 			<plugins>
