--- a/taskapp/pom.xml
+++ b/taskapp/pom.xml
@@ -15,8 +15,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
-		<sonar.organization>fssa-tech</sonar.organization>
-		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+  <sonar.organization>vinit-source</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<dependencies>
